src/z80asm/z80asm2/t/40-syntax/expected/dephase_01.txt
% z88dk-z80asm -v -dump-after-parse t/40-syntax//input/dephase_01.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Define constant: __FLOAT_GENMATH__ = 1
Assembling t/40-syntax/input/dephase_01.asm...
t/40-syntax/input/dephase_01.asm:1:9: error: Unexpected token: "xxx"
    dephase xxx
            ^
Program
    DephaseStmt
        Location: t/40-syntax/input/dephase_01.asm:2:1
